--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Paralax</title>
 </head>
 <body>
-    
+    <h1>SEI LÀ </h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque quod ut maxime, voluptatem quia nam a placeat cumque vero maiores, quisquam voluptatum illo suscipit nesciunt excepturi facilis aspernatur accusamus dignissimos?</p>
 </body>
 </html>
