--- a/index.html
+++ b/index.html
@@ -3,11 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./favicon/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="favicon/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <title>Paralax</title>
 </head>
 <body>
+    <header>
+        <h1>Cordel Moderno</h1>
+            <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></p>
+    </header>
+    <main>
+        <div>
+            <p>Estou ficando cansado</p>
+            <p>Da tal tecnologia</p>
+            <p>Só se fala por e-mail</p>
+            <p>Mensagem curta e fria</p>
+            <p>Twitter e Facebook</p>
+            <p>Antes que eu caduque</p>
+            <p>Vou dizer tudo em poesia.</p>
 
+        </div>
+
+        <div>
+            <p>Não é mais como era antes</p>
+            <p>É tudo abreviado</p>
+            <p>"Você" só tem duas letras</p>
+            <p>O "O" e o "E" foi riscado</p>
+            <p>Para declarar o amor</p>
+            <p>Basta botar uma flor</p>
+            <p>E um coração desenhado.</p>
+        </div>
+
+        <div>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
+
+        <div>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
+
+        <div>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+            <p></p>
+        </div>
+    </main>
+    <footer>
+        <p>Site criado por <a href="https://github.com/Brenno-pc" target="_blank" rel="external">Brenno</a> para o <a href="https://www.cursoemvideo.com/" target="_blank" rel="external">CursoEmVídeo</a></p>
+    </footer>
 </body>
 </html>
