--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="external">Milton Duarte</a></p>
     </header>
     <main>
-        <section>
+        <section class="normal">
             <p>
                 Estou ficando cansado <br>
                 Da tal tecnologia <br>
@@ -25,7 +25,7 @@
             </p>
         </section>
 
-        <section id="black">
+        <section class="imagem">
             <p>
                 Não é mais como era antes <br>
                 É tudo abreviado <br>
@@ -37,7 +37,7 @@
             </p>
         </section>
 
-        <section>
+        <section class="normal">
             <p>
                 Arroba agora não pesa <br>
                 É parte de um endereço <br>
@@ -45,7 +45,9 @@
                 Ou vai até no começo <br>
                 Agora é .com  <br>
                 Se o saite é muito bom <br>
-                Ele vale um alto preço. <br>
+                Ele vale um alto preço. 
+            </p>
+            <p>
                 Pra piorar a linguagem <br>
                 O emoticom é um risco <br>
                 Tem símbolo para tudo <br>
@@ -54,9 +56,10 @@
                 Pra entender como fica <br>
                 Decifre esse rabisco.
             </p>
+        
         </section>
 
-        <section>
+        <section class="imagem">
             <p>
                 Tenho saudade das cartas <br>
                 Escritas com a própria mão <br>
@@ -68,7 +71,7 @@
             </p>
         </section>
 
-        <section>
+        <section class="normal">
             <p>
                 Agora, escrevo e envio <br>
                 Chegando na mesma hora <br>
@@ -76,7 +79,9 @@
                 A pessoa foi embora <br>
                 Abriu outro aplicativo <br>
                 O mundo ficou cativo <br>
-                Da tecnologia do agora. <br>
+                Da tecnologia do agora. 
+            </p>
+            <p>
                 Felizmente, pra orar <br>
                 Não precisa de internet <br>
                 Deus escuta todo mundo <br>
@@ -86,6 +91,7 @@
                 Deixe que Deus interprete.
             </p>
         </section>
+
     </main>
     <footer>
         <p>Site criado por <a href="https://github.com/Brenno-pc" target="_blank" rel="external">Brenno</a> para o <a href="https://www.cursoemvideo.com/" target="_blank" rel="external">CursoEmVídeo</a></p>
